[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyregister-jhonataplayyt"
version = "0.1.0"
description = "Low Level wrapper for python"
authors = [{ name="Jhonata", email="jhonatacarneirorios@gmail.com" }]
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]